#639 closed bug (fixed)
[Deskbar] new replicants are incorrectly positioned
Reported by: | johndrinkwater | Owned by: | sikosis |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | diver | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Currently there are problems with deskbar icons, but I believe this is unrelated. No matter how many icons I have, like ProcessController, Media, etc, Pulse always overlaps (drawn on top of) the top left item.
Change History (11)
comment:1 by , 15 years ago
comment:2 by , 15 years ago
Summary: | [Pulse] Overlaps other icons in deskbar mode → [Deskbar] new replicants are incorrectly positioned |
---|
comment:3 by , 15 years ago
Yes, it does. After further testing, it is the all encompassing bug you'd mentioned earlier in #haiku. (I failed to see it with PC because it restarts Deskbar(?))
New bug description: When an new replicant is added to Deskbar, it appears at the start of the list of icons, whether or not the list is empty. Replicants are correctly repositioned once Deskbar has 'moved' its shelf.
comment:4 by , 15 years ago
Cc: | added |
---|
comment:5 by , 15 years ago
Component: | Applications → Kits |
---|
comment:6 by , 15 years ago
Well, if it doesn't happen on R5, it could very well be a problem in our BShelf implementation.
comment:7 by , 15 years ago
(In reply to comment #3)
Well, if it doesn't happen on R5, it could very well be a problem in our BShelf implementation.
I can confirm this bug (on build 17778).
comment:8 by , 15 years ago
Just a thought: could this depend on missing/wrongly initialized archiving flags in BView ? At least, I think the B_VIEW_FRAME_BIT should be set when MoveBy/MoveTo are called.
comment:9 by , 14 years ago
Resolution: | → fixed |
---|
comment:10 by , 14 years ago
Status: | new → closed |
---|
comment:11 by , 14 years ago
Fixed in hrev18354, the problem was BShelf not calling CanAcceptReplicantView() in AddReplicant.
Does it move to the correct position if you drag around the deskbar ?