_AddReplicant() now calls CanAcceptReplicantView(), too, which fixes the incorrect replicant positioning upon add, a.k.a. bug #639: Deskbar relied on that method being called to add positioning information to the replicant.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18354 a95241bf-73f2-0310-859d-f6bbb57e9c96